# tabela_fipe_astro

./: README.md  pyproject.toml
app/: created_tables.py  extract.py  load.py  load_settings.py  models.py
sql/: create_marcas_veiculos.sql  create_tables.sql
tests/: test_api_call.py  test_db.py  testes.py
